testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefFunction.errors.txt
foo.js(10,12): error TS2304: Cannot find name 'ResolveRejectMap'.


==== foo.js (1 errors) ====
    /**
     * @typedef {{
     *   [id: string]: [Function, Function];
     * }} ResolveRejectMap
     */
    
    let id = 0
    
    /**
     * @param {ResolveRejectMap} handlers
               ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ResolveRejectMap'.
     * @returns {Promise<any>}
     */
    const send = handlers => new Promise((resolve, reject) => {
      handlers[++id] = [resolve, reject]
    })